Stick footer to bottom of page if window is too small, Fix mainpage logo size

--- a/pyconcz_2016/static/scss/_footer.scss
+++ b/pyconcz_2016/static/scss/_footer.scss
@@ -8,6 +8,12 @@ footer {
     text-align: center;
   }
 
+  @media (min-height: 800px) {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
   .nav-footer {
     list-style: none;
     padding-left: 15px;
